<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingTop="2dp">

                            <ImageView

                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/firstpage_sx" />

                            <TextView

                                android:id="@+id/et_spinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ds_company"
                                android:textSize="14dp" />


                        </LinearLayout>


                        <Spinner
                            android:id="@+id/sp1"
                            android:layout_width="match_parent"
                            android:layout_height="24dp"></Spinner>

                    </FrameLayout>


                    <ListView
                        android:id="@+id/lst2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp">


                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/car_center" />


                                <ListView
                                    android:id="@+id/lstTire_1"
                                    android:layout_width="170dp"
                                    android:layout_height="240dp">


                                </ListView>


                                <ListView
                                    android:id="@+id/lstTire_2"
                                    android:layout_width="170dp"
                                    android:layout_height="240dp"
                                    android:layout_alignParentRight="true"></ListView>

                                <ListView
                                    android:id="@+id/lstTire_3"
                                    android:layout_width="170dp"
                                    android:layout_height="240dp"
                                    android:layout_alignParentBottom="true"></ListView>

                                <ListView
                                    android:id="@+id/lstTire_4"
                                    android:layout_width="170dp"
                                    android:layout_height="240dp"
                                    android:layout_alignParentBottom="true"
                                    android:layout_alignParentRight="true"></ListView>


                            </RelativeLayout>


                        </LinearLayout>


                        <!-- <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
                             android:layout_centerHorizontal="true"
                             android:layout_marginBottom="50dp"
                             android:text="@string/login_readeritem"
                             android:textColor="#8b8282"
                             android:textSize="13sp" />-->


                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <ListView
                        android:id="@+id/lst1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

               /* -----------------------我的双星布局开始啦------------------*/

                <LinearLayout
                    android:id="@+id/tab4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@mipmap/login_bg">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:orientation="vertical"
                            android:padding="30dp">
                            <!--   android:layout_marginTop="60dp"-->

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:layout_gravity="center_horizontal"
                                    android:src="@mipmap/head" />

                                <TextView
                                    android:id="@+id/tvNickname"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:paddingLeft="10dp"
                                    android:paddingRight="15dp"
                                    android:text="@string/nickname"
                                    android:textSize="25dp" />

                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="35dp"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:id="@+id/iVmyorder"
                                        android:layout_width="55dp"
                                        android:layout_height="55dp"
                                        android:layout_gravity="center_horizontal"
                                        android:layout_weight="1"
                                        android:src="@mipmap/myorder_icon" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_horizontal"
                                        android:text="@string/myorder"
                                        android:textSize="13dp" />


                                </LinearLayout>


                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="8"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:id="@+id/iVfeedback"
                                        android:layout_width="55dp"
                                        android:layout_height="55dp"
                                        android:layout_gravity="center_horizontal"
                                        android:layout_weight="20"
                                        android:src="@mipmap/feedback_icon" />


                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_horizontal"
                                        android:text="@string/feedback"
                                        android:textSize="13dp" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <ImageView
                                        android:id="@+id/iVversion"
                                        android:layout_width="55dp"
                                        android:layout_height="55dp"
                                        android:layout_gravity="center_horizontal"
                                        android:layout_weight="1"
                                        android:src="@mipmap/version_update_icon" />


                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_horizontal"
                                        android:text="@string/version_update"
                                        android:textSize="13dp" />

                                </LinearLayout>


                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="55dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvHead"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/head"
                                    android:textSize="20dp" />

                                <TextView
                                    android:id="@+id/tvChange_head"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="right"
                                    android:text="@string/change"
                                    android:textSize="20dp" />

                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvUsername"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/username"
                                    android:textSize="20dp" />
                                <!-- android:paddingLeft="15dp"-->

                                <TextView
                                    android:id="@+id/tvChange_username"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="right"

                                    android:text="@string/change"
                                    android:textSize="20dp" />

                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/passWord"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/password"
                                    android:textSize="20dp" />

                                <TextView
                                    android:id="@+id/tvChange_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="right"
                                    android:text="@string/change"
                                    android:textSize="20dp" />

                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvPhone"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/telephone"
                                    android:textSize="20dp" />

                                <TextView
                                    android:id="@+id/tvChange_phone"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="right"

                                    android:text="@string/change"
                                    android:textSize="20dp" />

                            </LinearLayout>


                            <Button
                                android:id="@+id/btnExit_login"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="40dp"
                                android:text="@string/exit_login"
                                android:textColor="@drawable/login_button"
                                android:textSize="20dp" />
                            <!--android:textColor="#8b8282"-->


                        </LinearLayout>


                    </RelativeLayout>


                </LinearLayout>


            </FrameLayout>

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#f4f5f4"
                />

        </LinearLayout>
    </TabHost>


</LinearLayout>
